# btc_card

./: .gitignore  README.md  ego-config.json  ego-projects.json  jest.config.js  package.json
canisters/: Cargo.toml
canisters/dapp/btc_wallet/actor/: Cargo.toml
canisters/dapp/btc_wallet/actor/src/: actor.rs  main.rs
canisters/dapp/btc_wallet/mod/: Cargo.toml
canisters/dapp/btc_wallet/mod/src/: mod.rs  service.rs  state.rs  types.rs  util.rs
canisters/infra/card_controller/actor/: Cargo.toml
canisters/infra/card_controller/actor/src/: actor.rs  main.rs
canisters/infra/card_controller/mod/: Cargo.toml
canisters/infra/card_controller/mod/src/: contract.rs  controller.rs  mod.rs  service.rs  state.rs  types.rs
canisters/infra/card_controller/mod/src/rpc/: btc_wallet.rs  mod.rs
canisters/infra/card_controller/mod/tests/: service_test.rs
canisters/infra/card_provider/actor/: Cargo.toml
canisters/infra/card_provider/actor/src/: actor.rs  main.rs
canisters/infra/card_provider/mod/: Cargo.toml
canisters/infra/card_provider/mod/src/: controller.rs  mod.rs  provider.rs  service.rs  state.rs  types.rs
canisters/lib/hdpath-0.6.1/: .cargo_vcs_info.json  Cargo.toml
canisters/lib/hdpath-0.6.1/src/: path_account.rs  path_custom.rs  path_short.rs  path_standard.rs  path_value.rs  purpose.rs  traits.rs
canisters/lib/tecdsa/: Cargo.toml
canisters/lib/tecdsa/src/: curve.rs  hash.rs  mod.rs  service.rs  signer.rs  state.rs  types.rs  utils.rs
canisters/lib/types/: Cargo.toml
canisters/lib/types/src/: types.rs
clients/app/: .gitignore  canister_ids.json  dfx.json  iconfont.json  index.html  package.json  tailwind.config.js  tsconfig.json  typings.d.ts
clients/app/src/: App.css  index.css  index.less  index.tsx  reset.less
clients/app/src/assets/css/: style.css
clients/app/src/assets/lottie/: card.json
clients/app/src/candid/: ledger.d.ts  ledger.idl.ts  nns-dapp-cert.idl.ts  nns-dapp.d.ts  nns-dapp.idl.ts
clients/app/src/components/: Back.tsx  Inscription.tsx  Main.tsx  Transaction.tsx
clients/app/src/components/iconfont/: IconADenglushebei.tsx  IconADengluyitaifang.tsx  IconAdd.tsx  IconAddress.tsx  IconAndroid.tsx  IconApple.tsx  IconArrowRight.tsx  IconBiometric.tsx  IconBiometrics.tsx  IconCardhome.tsx  IconChenggong.tsx  IconChrome.tsx  IconCycle.tsx  IconDanlogo.tsx  IconDark.tsx  IconDevice2.tsx  IconDiscord1.tsx  IconDiscord2.tsx  IconDiscover.tsx  IconDownload.tsx  IconEdge.tsx  IconEdit.tsx  IconEmail.tsx  IconEth2.tsx  IconExit.tsx  IconEye.tsx  IconEyeX.tsx  IconFace.tsx  IconFanhui.tsx  IconFiger.tsx  IconFirefox.tsx  IconFuzhi.tsx  IconGithub.tsx  IconHelp.tsx  (+58 more)
clients/app/src/config/: chainConfig.ts  constants.ts
clients/app/src/layout/: index.tsx
clients/app/src/models/: app.ts  setting.ts
clients/app/src/pages/: Active.tsx  Assets.tsx  Error.tsx  Send.tsx  index.tsx
clients/app/src/routes/: index.tsx
clients/app/src/services/: baseConnection.ts  cardConnection.ts  ctrlConnection.ts  ledgerConnection.ts  m3Provider.tsx  proxyActor.ts  walletProvider.ts  web3auth.tsx
clients/app/src/store/: index.ts  models.ts
clients/app/src/utils/: assets.ts  constants.ts  converter.ts  index.ts  localStorage.ts  reg.ts  resource.ts
clients/app/webpack/: config.base.js  config.dev.js  config.prod.js  paths.js  webpack.config.js
clients/idls/: btc_wallet.d.ts  btc_wallet.idl.ts  card_controller.d.ts  card_controller.idl.ts  card_provider.d.ts  card_provider.idl.ts  ego_deployer.d.ts  ego_deployer.idl.ts
clients/releases/: ego_release.test.ts
clients/scripts/: hackton.test.ts  localSigner.ts  proxyActor.ts
(+86 files in other folders)
