[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.8.4"
ic-cdk = "0.8.1"
ic-cdk-macros = "0.6.8"
ic-types = "0.7.0"
serde = "1.0.136"
serde_json = "1.0.79"
serde_bytes = "0.11.5"
serde_cbor = "0.11.2"
serde_with = "3.0.0"

icrc_ledger_types= {git ="ssh://git@github.com/dfinity/ic.git", package="icrc-ledger-types", branch="master"}
ego_types = "0.2.2"