[package]
name = "btc_wallet"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/actor.rs"
crate-type = ["cdylib"]

[[bin]]
name = "btc-wallet"
path = "src/main.rs"

[dependencies]
candid = "0.8.4"
ic-cdk = "0.8.1"
ic-cdk-macros = "0.6.8"
serde = "1.0.136"
serde_json = "1.0.79"
serde_bytes = "0.11.5"
btc_wallet_mod = {path = "../mod"}

ego_types = "0.2.3"
ego_macros = "0.2.6"
ego_lib = "0.4.8"

tecdsa_mod = {path = "../../../lib/tecdsa"}

