[package]
name = "btc_wallet_mod"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/mod.rs"

[dependencies]
async-trait = "0.1.57"
candid = "0.8.4"
ic-cdk = "0.8.1"
ic-cdk-macros = "0.6.8"
ic-certified-map = "0.3.0"
serde_bytes = "0.11"
serde = "1"

itertools="0.10.5"

ego_types = "0.2.3"
ego_macros = "0.2.6"
ego_lib = "0.4.8"

# sha3 = "0.10.6"
tiny-keccak = { version = "2.0.1", features = ["keccak"] }
# libsecp256k1 = {git="https://github.com/rocklabs-io/libsecp256k1", features=["lazy-static-context"]}
k256 = { version = "0.11.4", default-features = false, features = ["ecdsa", "sha256","pem","keccak256" ] }
hex = "0.4.3"

tecdsa_mod = {path = "../../../lib/tecdsa"}