[package]
name = "card_controller_mod"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/mod.rs"

[dependencies]
async-trait = "0.1.57"
candid = "0.8.4"
ic-cdk = "0.8.1"
ic-cdk-macros = "0.6.8"
ic-certified-map = "0.3.0"
serde_bytes = "0.11"
serde = "1"
itertools = "0.10.5"

ego_types = "0.2.3"
ego_macros = "0.2.6"
ego_lib = "0.4.8"

md5 = "0.7.0"

types = { path = "../../../lib/types" }

[dev-dependencies]
mockall = "0.11.2"
tokio = { version = "1.21.0", features = ["full"] }

[features]
test_mode = ["ego_types/test_mode"]